# Framer

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: FramerConfig.cmake.in  dependencies.cmake
include/: DemoClass.h  framer.h
include/Framer/: DemoClass.hpp
src/: DemoClass.cpp  DemoClass.h
